# pgcopylib

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
src/pgcopylib/: __init__.py  reader.py  writer.py
src/pgcopylib/common/: __init__.py  enums.py
src/pgcopylib/common/dtypes/functions/: digits.pyx
src/pgcopylib/core/: functions.pyx
src/pgcopylib/core/types/: dates.pyx  digits.pyx  strings.pyx
tests/: test_pgcopylib.py
