[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "pgcopylib"
version = "0.2.4.dev1"
description = "PGCopy bynary dump parser."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["python-dateutil>=2.8.0"]

[project.urls]
Homepage = "https://github.com/dns-technologies/pgcopylib"
Documentation = "https://dns-technologies.github.io/dbhose_airflow/base_modules/pgcopylib/index.html"
Repository = "https://github.com/dns-technologies/pgcopylib"
Changelog = "https://github.com/dns-technologies/pgcopylib/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*.pyi", "**/*.pyd", "*.pyd", "*.md", "*.txt"]
